# Meta-Hackathon

./: .env.example  Dockerfile  inference.py  pyproject.toml
app/: __init__.py  grader.py  models.py  reward.py
ar-proactive-intel/: .gitignore  Dockerfile  README.md  inference.py  openenv.yaml  pyproject.toml  requirements.txt
ar-proactive-intel/app/: environment.py  main.py
ar-proactive-intel/scenarios/easy/: cooking_002.json  cooking_003.json
ar-proactive-intel/scenarios/hard/: interview_001.json  interview_002.json
ar-proactive-intel/scenarios/medium/: cafe_001.json  cafe_003.json
ar-proactive-intel/tests/: test_environment.py
scenarios/easy/: cooking_001.json
scenarios/hard/: interview_003.json
scenarios/medium/: cafe_002.json
server/: app.py
