[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ar-proactive-intel"
version = "1.0.0"
description = "OpenEnv RL environment for proactive AR glasses decision-making"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn>=0.30.1",
    "pydantic>=2.5.0",
    "openai>=1.30.1",
    "requests>=2.32.0",
    "python-dotenv>=1.0.0",
    "openenv-core>=0.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
server = "app.main:start"

[tool.hatch.build.targets.wheel]
packages = ["app"]